--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CHAMPIONS STORE</title>
 </head>
 <body>
+    <h1>BIENVENIDO A CHAMPIONS STORE</h1>
+    <h2>La tienda deportiva mas gloriosa de todo Uruguay</h2>
     <script src="./main.js"></script>
 </body>
 </html>
