agrego eventos y funciones

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </section>
         <section>
             <div class="formT"></div>
-            <form>
+            <form id="formulario">
                 <input type="text" class="form-control" placeholder="Nombre" aria-label="First name" required>
                 <input type="text" class="form-control" placeholder="Apellido" aria-label="Last name" required>
                 <input type="email" class="form-control" id="exampleFormControlInput1"  placeholder="ej. juanitoperez@gmail.com" required>
@@ -52,8 +52,11 @@
                 <div class="consultas">
                     <textarea class="form-control " placeholder="Articulo A Comprar"></textarea>
                   </div>
+                  <input type="submit" value="Enviar">
+                  <input type="reset" value="Limpiar">
             </form>
         </section>
+        <button id="boton">chequeador de sesiones</button>
     </main>
     <footer>
         <h3>Todos los derechos reservados</h3>
