--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
         <section>
             <div class="formT"></div>
             <form id="formulario">
-                <input type="text" class="form-control" placeholder="Nombre" aria-label="First name" required>
-                <input type="text" class="form-control" placeholder="Apellido" aria-label="Last name" required>
-                <input type="email" class="form-control" id="exampleFormControlInput1"  placeholder="ej. juanitoperez@gmail.com" required>
-                <input type="tel" class="form-control" maxlength="17" placeholder="Telefono ej.123456789" required
+                <input type="text" class="form-control" id="nombre" placeholder="Nombre" aria-label="First name" required>
+                <input type="text" class="form-control" id="apellido" placeholder="Apellido" aria-label="Last name" required>
+                <input type="email" class="form-control" id="mail"  placeholder="ej. juanitoperez@gmail.com" required>
+                <input type="tel" class="form-control" id="telefono" maxlength="17" placeholder="Telefono ej.123456789" required
                 aria-label="Text input with dropdown button">
                 <div class="consultas">
-                    <textarea class="form-control " placeholder="Articulo A Comprar"></textarea>
+                    <textarea class="form-control " id="articulo" placeholder="Articulo A Comprar"></textarea>
                   </div>
                   <input type="submit" value="Enviar">
                   <input type="reset" value="Limpiar">
