agrego una bienvenida con datos del storage

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </header>
 
     <main>
+        <div id="bienvenida"></div>
         <section>
             <div class="deportes"></div>
             <ul class="listaDep">
