--- a/index.html
+++ b/index.html
@@ -5,21 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="assets/img/Untitled_logo_1_free-file.png">
+    <link rel="stylesheet" href="libs/bootstrap-5.2.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.5/dist/sweetalert2.min.css">
     <link rel="stylesheet" href="estilos/styles.css">
     <title>CHAMPIONS STORE</title>
 </head>
 
 <body>
     <header class="cabecera">
+        <a href="#"><img id="logo" class="logo" src="./assets/img/Untitled_logo_1_free-file.png"></a>
         <div class="presentacion"></div>
-        <div class="subtitulo"></div>    
-       </div>
-        <nav>
+        <div class="subtitulo"></div>
+        </div>
+        <nav class="menu">
             <ul>
-                <li class="menuitem"></li>
-                <li class="menuitem"></li>
-                <li class="menuitem"></li>
-                <li class="menuitem"></li>
+            <a href="./index.html"><li class="menuitem"></li></a>
+            <a href="./index.html"><li class="menuitem"></li></a>
+            <a href="./index.html"><li class="menuitem"></li></a>
+            <a href="./index.html"><li class="menuitem"></li></a>
             </ul>
         </nav>
     </header>
@@ -27,43 +32,138 @@
     <main class="principal">
         <div id="bienvenida"></div>
         <section>
+            <!--CARDS DE BOOTSTRAP-->
             <div class="deportes"></div>
             <ul class="listaDep">
             </ul>
+            <div class="card-group depor">
+                <div class="card">
+                    <img src="./assets/img/pexels-stanley-morales-3148452.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Fútbol</h5>
+                    </div>
+                    <div class="card-footer">
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./assets/img/pexels-football-wife-1618200.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Fútbol Americano</h5>
+                    </div>
+                    <div class="card-footer">
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./assets/img/pexels-markus-spiske-1752757 (1).jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Basketball</h5>
+                    </div>
+                    <div class="card-footer">
+                    </div>
+                </div>
+            </div>
         </section>
         <section>
             <div class="indu"></div>
             <ul class="listaIN"></ul>
+            <!--CARDS DE BOOTSTRAP-->
+            <div class="card-group depor">
+                <div class="card">
+                    <img src="./assets/img/arsenal-jersey-22-23-home.webp" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Camisetas Premier League</h5>
+                        <p class="card-text">Todas las camisetas de la Premier, indica el equipo en el registro</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">U$ 3400</small>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./assets/img/aaaaaaaaaaaaaaaaaa.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Camisetas NFL </h5>
+                        <p class="card-text">Todas las camisetas de la NFL, indica el equipo en el registro</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">U$ 3500</small>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./assets/img/MSGBMZ0051A_RANDLE-copy_1000x1000.progressive.webp" class="card-img-top"
+                        alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Camisetas NBA</h5>
+                        <p class="card-text">Todas las camisetas de la NBA, indica el equipo en el registro</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">U$ 3500</small>
+                    </div>
+                </div>
+            </div>
         </section>
         <section>
             <div class="calzado"></div>
             <ul class="listaC"></ul>
+            <!--CARDS DE BOOTSTRAP-->
+            <div class="card-group depor">
+                <div class="card">
+                    <img src="./assets/img/zapas football.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Nike Mercurial Football</h5>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">U$ 2500</small>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./assets/img/dddddddddddddd.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Nike Air Jordan</h5>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">U$ 3000</small>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./assets/img/ruuuuuuuuuuun.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Nike Air running</h5>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">U$ 2400</small>
+                    </div>
+                </div>
+            </div>
         </section>
         <section>
-            <div class="accesorios"></div>            
-            <ul class="listAccesorios"></ul>
-        </section>
-        <section>
+            <!-- FORMULARIO -->
             <div class="formT"></div>
             <form id="formulario">
-                <input type="text" class="form-control" id="nombre" placeholder="Nombre" aria-label="First name" required>
-                <input type="text" class="form-control" id="apellido" placeholder="Apellido" aria-label="Last name" required>
-                <input type="email" class="form-control" id="mail"  placeholder="ej. juanitoperez@gmail.com" required>
-                <input type="tel" class="form-control" id="telefono" maxlength="17" placeholder="Telefono ej.123456789" required
-                aria-label="Text input with dropdown button">
+                <input type="text" class="form-control" id="nombre" placeholder="Nombre" aria-label="First name"
+                    required>
+                <input type="text" class="form-control" id="apellido" placeholder="Apellido" aria-label="Last name"
+                    required>
+                <input type="email" class="form-control" id="mail" placeholder="ej. juanitoperez@gmail.com" required>
+                <input type="tel" class="form-control" id="telefono" maxlength="17" placeholder="Telefono ej.123456789"
+                    required aria-label="Text input with dropdown button">
                 <div class="consultas">
-                    <textarea class="form-control " id="articulo" placeholder="Articulo A Comprar"></textarea>
-                  </div>
-                  <input type="submit" value="Enviar">
-                  <input type="reset" value="Limpiar">
+                    <textarea class="form-control " id="articulo" placeholder="Articulo A Comprar" required></textarea>
+                </div>
+                <div class="botones">
+                    <input type="submit" value="Enviar">
+                    <input type="reset" value="Limpiar">
+                </div>
             </form>
         </section>
-        <button id="boton">chequeador de sesiones</button>
     </main>
-    <footer>
+    <footer class="foot">
         <h3>Todos los derechos reservados</h3>
     </footer>
-  <script src="./main.js"></script>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="libs/bootstrap-5.2.3-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
