agrego fetch y cargo datos desde una API

--- a/index.html
+++ b/index.html
@@ -136,6 +136,12 @@
             </div>
         </section>
         <section>
+            <div class="botonSec">
+              <button id="articuloSec">CATALOGO SECRETO</button>  
+            <ul class="lista-productos"></ul>
+            </div>
+        </section>
+        <section>
             <!-- FORMULARIO -->
             <div class="formT"></div>
             <form id="formulario">
@@ -155,6 +161,7 @@
                 </div>
             </form>
         </section>
+
     </main>
     <footer class="foot">
         <h3>Todos los derechos reservados</h3>
