--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
 <body>
     <header class="cabecera">
         <a href="#"><img id="logo" class="logo" src="./assets/img/Untitled_logo_1_free-file.png"></a>
-        <div class="presentacion"></div>
-        <div class="subtitulo"></div>
         </div>
         <nav class="menu">
             <ul>
+        <!-- ITEMS SE GENERAN DINAMICAMENTE CON EL DOM -->    
             <a href="./index.html"><li class="menuitem"></li></a>
             <a href="./index.html"><li class="menuitem"></li></a>
             <a href="./index.html"><li class="menuitem"></li></a>
@@ -33,9 +32,8 @@
         <div id="bienvenida"></div>
         <section>
             <!--CARDS DE BOOTSTRAP-->
+            <!-- TITULO DE SECCION SE GENERA DINAMICAMENTE CON EL DOM -->    
             <div class="deportes"></div>
-            <ul class="listaDep">
-            </ul>
             <div class="card-group depor">
                 <div class="card">
                     <img src="./assets/img/pexels-stanley-morales-3148452.jpg" class="card-img-top" alt="...">
@@ -64,6 +62,7 @@
             </div>
         </section>
         <section>
+             <!-- TITULO DE SECCION SE GENERA DINAMICAMENTE CON EL DOM -->
             <div class="indu"></div>
             <ul class="listaIN"></ul>
             <!--CARDS DE BOOTSTRAP-->
@@ -102,6 +101,7 @@
             </div>
         </section>
         <section>
+             <!-- TITULO DE SECCION SE GENERA DINAMICAMENTE CON EL DOM -->
             <div class="calzado"></div>
             <ul class="listaC"></ul>
             <!--CARDS DE BOOTSTRAP-->
@@ -142,6 +142,7 @@
             </div>
         </section>
         <section>
+         <!-- TITULO DE SECCION SE GENERA DINAMICAMENTE CON EL DOM -->
             <!-- FORMULARIO -->
             <div class="formT"></div>
             <form id="formulario">
