seccion formularios desde el DOM

--- a/index.html
+++ b/index.html
@@ -142,25 +142,9 @@
             </div>
         </section>
         <section>
-         <!-- TITULO DE SECCION SE GENERA DINAMICAMENTE CON EL DOM -->
+         <!-- TODA LA SECCION FORMULARIO SE GENERA DINAMICAMENTE CON EL DOM -->
             <!-- FORMULARIO -->
             <div class="formT"></div>
-            <form id="formulario">
-                <input type="text" class="form-control" id="nombre" placeholder="Nombre" aria-label="First name"
-                    required>
-                <input type="text" class="form-control" id="apellido" placeholder="Apellido" aria-label="Last name"
-                    required>
-                <input type="email" class="form-control" id="mail" placeholder="ej. juanitoperez@gmail.com" required>
-                <input type="tel" class="form-control" id="telefono" maxlength="17" placeholder="Telefono ej.123456789"
-                    required aria-label="Text input with dropdown button">
-                <div class="consultas">
-                    <textarea class="form-control " id="articulo" placeholder="Articulo A Comprar" required></textarea>
-                </div>
-                <div class="botones">
-                    <input type="submit" value="Enviar">
-                    <input type="reset" value="Limpiar">
-                </div>
-            </form>
         </section>
 
     </main>
